--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,13 @@
   <!-- Comportement CDK component developpement Kit -->
   <button type="button" (click)="laFonctionClickBt();" >OK Button</button>
  
+  <!-- Bouton de d'arret du timer -->
+  <button type="button" *ngIf="timerToken" (click)="stopTimer();" >STOP Timer</button>
+
+  <!-- Affichage d'une liste  -->
+  <ul>
+    <li *ngFor="let item of letableau">{{item}}</li>
+  </ul>
+
 </div>
 <router-outlet></router-outlet>
