--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,36 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <!-- <h1>
-    Welcome to {{ title }}!
-  </h1>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <p> Montant : {{montant | currency:'EUR':1.2-2 | euro}}</p>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#" routerLink="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" routerLink="/list">List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  href="#"routerLink="/view">View</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"routerLink="/create">View</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
 
-  <!-- Attention préciser le type button car par defaut le type est submit -->
-  <!-- Comportement CDK component developpement Kit -->
-  <!-- <button type="button" (click)="laFonctionClickBt();">OK Button</button> -->
-
-  <!-- Bouton de d'arret du timer -->
-  <!-- <button type="button" *ngIf="timerToken" (click)="stopTimer();">STOP Timer</button> -->
-
-  <!-- Affichage d'une liste  -->
-  <!-- <ul>
-    <li *ngFor="let item of letableau">{{item}}</li>
-  </ul>  -->
-
-  <a href="" routerLink="/">Home</a>
-  <a href="" routerLink="/list">Liste</a>
-  <a href="" routerLink="/view">Visualisation</a>
-  <a href="" routerLink="/create">Creation</a>
-
-  <button type="button" (click)="goHome();">Home</button>
-  <button type="button" (click)="goList();">Liste</button>
-  <button type="button" (click)="goView();">Visualisation</button>
-  <button type="button" (click)="goCreate();">Creation</button>
-
-
+  <!-- <main role="main" class="container">
+    <div class="starter-template">
+    </div>    
+  </main> -->
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
