--- a/src/app/lespages/page-list/page-list.component.html
+++ b/src/app/lespages/page-list/page-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  page-list works!
-</p>
+
+    <div class="alert alert-danger">
+        <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
+      </div>
+
+
+  {{tabUsers | json}}
