--- a/src/app/lespages/page-home/page-home.component.html
+++ b/src/app/lespages/page-home/page-home.component.html
@@ -1,44 +1,1 @@
-<div>
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <!-- <div class="alert alert-success" *ngIf="success" >
-                <strong>Password changed!</strong>
-            </div>
-            <div class="alert alert-danger" *ngIf="error"  >
-                <strong>An error has occurred!</strong> The password could not be changed.
-            </div>
-
-            <div class="alert alert-danger" *ngIf="doNotMatch" >
-                The password and its confirmation do not match!
-            </div>
- -->
-            <form (ngSubmit)="traitementForm();" [formGroup]="userForm">
-
-                <!-- <div class="form-group"> -->
-                    <!-- <label class="form-control-label" for="password" >User</label> -->
-                    <input type="test" class="form-control" id="username" name="name" placeholder="name" formControlName="username" minlength=4 maxlength=50 required>
-                    <!-- <label class="form-control-label" for="password" >Password</label> -->
-                    <input type="password" class="form-control" id="password" name="password" placeholder="password" formControlName="password">
-
-                    <!-- <div *ngIf="password.invalid">
-                        <small class="form-text text-danger"
-                           *ngIf="password.errors.required" >
-                            Your password is required.
-                        </small>
-                        <small class="form-text text-danger"
-                           *ngIf="password.errors.minlength" >
-                            Your password is required to be at least 4 characters.
-                        </small>
-                        <small class="form-text text-danger"
-                           *ngIf="password.errors.maxlength" >
-                            Your password cannot be longer than 50 characters.
-                        </small>
-                    </div> -->
-                <!-- </div> -->
-
-                <button type="submit" [disabled]="userForm.invalid" class="btn btn-primary" >Login</button>
-            </form>
-        </div>
-    </div>
-</div>
-
+<app-boite-login #laboitelogin></app-boite-login>
